Fixed checkstyle problems
Added maven checkstyle plugin and fixed detected
 problems in the source code.